db ingest test finished